# tfhe-versions-test-data

./: .gitattributes  Cargo.toml  README.md
data/: high_level_api.ron  latest  shortint.ron
data/0_6/: client_key.cbor  ct1.cbor  ct2.cbor  shortint.ron
data/0_6/high_level_api/: bool1.bcode  bool1.cbor  bool2.bcode  bool2.cbor  bool_list.bcode  bool_list.cbor  client_key.bcode  client_key.cbor  client_key_for_pubkey.bcode  client_key_for_pubkey.cbor  compact_bool.bcode  compact_bool.cbor  compact_public_key.bcode  compact_public_key.cbor  compressed_compact_public_key.bcode  compressed_compact_public_key.cbor  compressed_modswitched_bool.bcode  compressed_modswitched_bool.cbor  compressed_public_key.bcode  compressed_public_key.cbor  compressed_seeded_bool.bcode  compressed_seeded_bool.cbor  compressed_server_key.bcode  compressed_server_key.cbor  ct1.bcode  ct1.cbor  ct1_compressed.bcode  ct1_compressed.cbor  ct1_signed.bcode  ct1_signed.cbor  ct2.bcode  ct2.cbor  ct2_compressed.bcode  ct2_compressed.cbor  ct2_signed.bcode  ct2_signed.cbor  ct_compact.bcode  ct_compact.cbor  ct_compact_signed.bcode  ct_compact_signed.cbor  (+16 more)
data/0_6/shortint/: client_key.cbor  ct1.cbor  ct2.cbor  shortint.ron
data/0_7/high_level_api/: client_key.cbor.bcode  client_key.cbor.cbor  hl_heterogeneous_list.bcode  hl_heterogeneous_list.cbor
src/: data_0_6.rs  data_0_7.rs  generate.rs  lib.rs  load.rs  main.rs
