[package]
name = "tfhe-versions-test-data"
version = "0.1.0"
license = "BSD-3-Clause-Clear"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is a list of tfhe-rs versions we will generate data for. This list will grow over time.
# They are only activated when generating data, with the binary target and the "generate" feature.
tfhe_0_6 = { version = "0.6", features = ["shortint", "x86_64-unix"], package = "tfhe", optional = true }

# This is the current tfhe-rs version that will be tested. The version should be updated over time.
# This is only available when this crate is used as a lib dependency with the "load" feature.
tfhe = { version = "0.6", features = ["shortint", "x86_64-unix"], optional = true }

tfhe-versionable = { version = "0.1" }

# other deps
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
ciborium = "0.2"

[[bin]]
name = "tfhe-versions-test-data"
required-features = ["generate"]

[features]
default = ["generate"]
generate = ["dep:tfhe_0_6"]
load = ["dep:tfhe"]

[patch.crates-io]
tfhe_0_6 = { git = "https://github.com/zama-ai/tfhe-rs.git", branch = "integration/0.6/versioning", package = "tfhe" }
tfhe-versionable = { git = "https://github.com/zama-ai/tfhe-rs.git", branch = "integration/0.6/versioning"}
