[package]
name = "tfhe-backward-compat-data"
version = "0.1.0"
license = "BSD-3-Clause-Clear"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# This is a list of tfhe-rs versions we will generate data for. This list will grow over time.
# They are only activated when generating data, with the binary target and the "generate" feature.
tfhe_0_6 = { version = "0.6", features = ["shortint", "x86_64-unix"], package = "tfhe", optional = true }

tfhe-versionable = { version = "0.1", optional = true }

# other deps
serde = { version = "1.0", features = ["derive"] }
semver = { version = "1.0", optional = true }
ron = { version = "0.8", features = ["integer128"] }
ciborium = "0.2"

[[bin]]
name = "tfhe-backward-compat-data"
required-features = ["generate"]

[features]
default = ["generate"]

generate = ["dep:tfhe_0_6", "dep:tfhe-versionable"]
load = ["dep:semver"]

[patch.crates-io]
tfhe_0_6 = { git = "https://github.com/zama-ai/tfhe-rs.git", branch = "integration/0.6/versioning", package = "tfhe" }
tfhe-versionable = { git = "https://github.com/zama-ai/tfhe-rs.git", branch = "integration/0.6/versioning"}
